--- a/css/main.css
+++ b/css/main.css
@@ -22,14 +22,17 @@ a:hover {
 h1 {
     font-size: 3em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    line-height: 1em;
 }
 h2 {
-    font-size: 2.5em;
+    font-size: 2em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    line-height: 1em;
 }
 h3 {
     font-size: 2em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    line-height: 1em;
 }
 p {
     font-size: 1em;
