--- a/css/main.css
+++ b/css/main.css
@@ -23,16 +23,19 @@ h1 {
     font-size: 2em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     line-height: 1em;
+    color: #CCFF66
 }
 h2 {
     font-size: 1em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     line-height: 1em;
+    color: #CCFF66
 }
 h3 {
     font-size: 1em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     line-height: 1em;
+    color: #CCFF66
 }
 p {
     font-size: 1em;
