--- a/css/main.css
+++ b/css/main.css
@@ -23,13 +23,13 @@ h1 {
     font-size: 2em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     line-height: 1em;
-    color: #CCFF66
+    color: #99CC00
 }
 h2 {
     font-size: 1em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     line-height: 1em;
-    color: #CCFF66
+    color: #99CC00
 }
 h3 {
     font-size: 1em;
